--- a/server/Dockerfile.prod
+++ b/server/Dockerfile.prod
@@ -4,6 +4,7 @@ RUN apk add --update --no-cache make vim git curl gpg unzip gcc g++ python3
 RUN ln -sf python3 /usr/bin/python
 ADD . /app/
 WORKDIR /app
-RUN npm i
+# RUN npm i
+RUN npm i --registry=https://registry.npmmirror.com
 
-CMD ["npm", "run", "start:prod"]
+CMD ["npm", "run", "prod"]
