--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "author": "",
   "private": true,
   "scripts": {
-    "schema:sync": "typeorm schema:sync",
+    "schema:sync": "nest build; typeorm schema:sync",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "node ./tools/ensure-pg-db.js; npm run schema:sync; nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main.js",
+    "prod": "npm run build; node ./tools/ensure-pg-db.js; npm run schema:sync; npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,8 +27,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "npm:mysql2@^2.1.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "run-script-webpack-plugin": "^0.0.11",
@@ -51,27 +53,9 @@
     "jest": "27.0.6",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   }
 }
