--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.0.1",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "meilisearch": "^0.24.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
