--- a/server/Dockerfile.agent
+++ b/server/Dockerfile.agent
@@ -5,7 +5,7 @@ RUN ln -sf python3 /usr/bin/python
 RUN mkdir /app
 ADD ./package.json /app/package.json
 WORKDIR /app
-RUN npm i
-# RUN npm i --registry=https://registry.npmmirror.com
+# RUN npm i
+RUN npm i --registry=https://registry.npmmirror.com
 
 CMD ["npm", "run", "start:dev"]
