--- a/server/docker-compose.prod.yml
+++ b/server/docker-compose.prod.yml
@@ -7,9 +7,11 @@ services:
       - "18555:3000"
     links:
       - "postgres"
+      - "meilisearch"
+    env_file:
+      - .env.prod
     volumes:
-      - ./env.prod.ts:/app/env.ts
-      - ./ormconfig.prod.js:/app/ormconfig.js
+      - ./ormconfig.js:/app/ormconfig.js
       - ./.env.prod:/app/.env
       - data:/data
   postgres:
@@ -22,6 +24,11 @@ services:
       - "18556:5432"
   meilisearch:
     image: "getmeili/meilisearch:v0.25.2"
+    volumes:
+      - meili:/data.ms
+    ports:
+      - "18557:7700"
 volumes:
   postgres-data:
   data:
+  meili:
