--- a/server/docker-compose.agent.yml
+++ b/server/docker-compose.agent.yml
@@ -24,6 +24,7 @@ services:
       - data:/data
   postgres:
     image: "postgres:14"
+    restart: always
     environment:
       - POSTGRES_PASSWORD=$DB_PASSWORD
     volumes:
@@ -32,6 +33,7 @@ services:
       - "18566:5432"
   meilisearch:
     image: "getmeili/meilisearch:v0.25.2"
+    restart: always
     volumes:
       - meili:/data.ms
     ports:
