--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -21,6 +21,7 @@ services:
       - data:/data
   postgres:
     image: "postgres:14"
+    restart: always
     environment:
       - POSTGRES_PASSWORD=$DB_PASSWORD
     volumes:
@@ -29,6 +30,7 @@ services:
       - "18556:5432"
   meilisearch:
     image: "getmeili/meilisearch:v0.25.2"
+    restart: always
     volumes:
       - meili:/data.ms
     ports:
