--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -17,12 +17,14 @@
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
     "crypto-js": "^4.1.1",
+    "izitoast": "^1.4.0",
     "lodash": "^4.17.21",
     "milligram": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "keywords": [],
   "author": "",
