--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "sweetalert2": "^11.4.4",
     "toastr": "^2.1.4",
     "webpack-bundle-analyzer": "^4.5.0"
   },
