--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -16,6 +16,7 @@
     "@notelix/web-marker": "^2.0.3",
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
+    "classnames": "^2.3.2",
     "crypto-js": "^4.1.1",
     "izitoast": "^1.4.0",
     "lodash": "^4.17.21",
