--- a/server/docker-compose.agent.yml
+++ b/server/docker-compose.agent.yml
@@ -13,7 +13,7 @@ services:
       - .env.agent
     environment:
       - RUN_MODE=AGENT
-      - AGENT_SYNC_URL_OVERRIDE=http://notelix-dev_backend_1:3000
+#      - AGENT_SYNC_URL_OVERRIDE=http://notelix-dev_backend_1:3000
     volumes:
       - ./src:/app/src
       - ./tools:/app/tools
