Fixing path of docker-compose yml files

--- a/server/docker-compose.prod.yml
+++ b/server/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   backend:
-    image: notelix:prod
+    image: kevinwang15/notelix:prod
     restart: always
     ports:
       - "18555:3000"
