--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   backend:
-    image: notelix:dev
+    image: kevinwang15/notelix:dev
     restart: always
     #    command: [ "sh", "-c", "sleep 3000" ]
     ports:
