--- a/chrome-extension/tsconfig.json
+++ b/chrome-extension/tsconfig.json
@@ -1,15 +1,17 @@
 {
-    "compilerOptions": {
-        "sourceMap": true,
-        "lib": [
-            "dom",
-            "es2015"
-        ],
-        "target": "es5",
-        "downlevelIteration": true,
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["./src/*"]
-        }
+  "compilerOptions": {
+    "sourceMap": true,
+    "lib": [
+      "dom",
+      "es2015"
+    ],
+    "target": "es5",
+    "downlevelIteration": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
     }
+  }
 }
