--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "notelix",
+  "name": "Notelix",
   "version": "0.1.9",
-  "description": "",
+  "description": "An open source web note taking / highlighter software",
   "manifest_version": 2,
   "permissions": [
     "activeTab",
@@ -30,5 +30,11 @@
       ],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "icons": {
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
+  }
 }
