--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,9 +1,10 @@
 {
   "name": "Notelix",
-  "version": "0.1.9",
+  "version": "0.2.0",
   "description": "An open source web note taking / highlighter software",
   "manifest_version": 2,
   "permissions": [
+    "tabs",
     "activeTab",
     "storage",
     "<all_urls>"
